--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "simple-json-db": "^2.0.0"
