--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
